[package]
name = "gari_assignement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
bson = "2.3.0"
serde_json = "1.0.81"
futures = "0.3"
actix-web-lab = "0.17.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
solana-sdk = "1.10.0"
solana-client = "1.14.7"
solana-program = "1.7.14"
solana-transaction-status = "1.14.7"
chrono = "0.4.23"


